added the secend blog

--- a/my-webdevlopment-code-.html
+++ b/my-webdevlopment-code-.html
@@ -14,6 +14,14 @@
 
 
     </div>
+    <div class="crickert">
+        <h4> my 2nd div</h4>
+        <ul>
+            <li> titon das</li>
+            <li> shakib</li>
+            <li> tamim</li>
+        </ul>
+    </div>
     
 </body>
 </html>
